[package]
edition = "2024"
name = "spacetime_chess"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
argon2 = "0.5"
log = "0.4"
rand_core = {version = "0.10.1"}
spacetimedb = {version = "2.2.0"}
